<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/main_title"
        android:textColor="@color/black"
        android:textSize="24dp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_one_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@color/primary"
            android:text="@string/first_option"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/rb_three_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@color/primary"
            android:text="@string/second_option"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/rb_six_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@color/primary"
            android:text="@string/third_option"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/rb_one_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:buttonTint="@color/primary"
            android:text="@string/forth_option"
            android:textColor="@color/black"
            android:textSize="18dp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:text="Cancel"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/subscribe_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:text="Subscribe"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            />

    </LinearLayout>
</LinearLayout>