<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#00BCD4"
    android:layout_height="match_parent"
    tools:context="com.alisoft.StoneVPN.speed.activity.Faq">


    <include layout="@layout/app_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FAQ"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/text_color"
                android:layout_marginRight="10dp"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="8dp"
                android:layout_margin="10dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question1"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question1_answer"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="8dp"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question2"
                        android:layout_margin="5dp"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/question2_answer"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/text_color"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="8dp"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question3"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:layout_margin="5dp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/question3_answer"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/text_color"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="8dp"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question4"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:text="   In most devices, open device's Setting-->Battery-->Battery optimization, select All apps in the dropdown menu, find Stone VPN and set it to Don't optimize.
In Huawei devices, open device's Setting-->Battery-->Launch, find Stone VPN in the app list, switch off to manage manually, enable Auto-launch and Run in background.\n
   Or you can find battery setting in Protected Apps.\n
   In Samsung devices, open device's Setting-->Battery-->App Power Saving-->Details, find Stone VPN in the app list and disabled it.\n
   In other devices, you may find it in Setting-->Battery as Background activity or Protected apps."

                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="8dp"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:text="@string/question5"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question5_answer"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="8dp"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question6"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:layout_margin="5dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question6_answer"
                        android:textSize="16dp"
                        android:textColor="@color/text_color"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>



</RelativeLayout>
